--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Site vitrine</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/script.js"></script>
-  </head>
+    </head>
   <body>
     <div class="topbar">
       <div class="container nav">
@@ -34,22 +33,22 @@
         <h2>Galerie</h2>
         <div class="grid">
           <div class="card">
-            <a href="img1.html"><img src="img/img1.jpg" alt="Image 1" /></a>
+            <a href="image.html?id=1"><img src="img/img1.jpg" alt="Image 1" /></a>
           </div>
           <div class="card">
-            <a href="img2.html"><img src="img/img2.jpg" alt="Image 2" /></a>
+            <a href="image.html?id=2"><img src="img/img2.jpg" alt="Image 2" /></a>
           </div>
           <div class="card">
-            <a href="img3.html"><img src="img/img3.jpg" alt="Image 3" /></a>
+            <a href="image.html?id=3"><img src="img/img3.jpg" alt="Image 3" /></a>
           </div>
           <div class="card">
-            <a href="img4.html"><img src="img/img4.jpg" alt="Image 4" /></a>
+            <a href="image.html?id=4"><img src="img/img4.jpg" alt="Image 4" /></a>
           </div>
           <div class="card">
-            <a href="img5.html"><img src="img/img5.jpg" alt="Image 5" /></a>
+            <a href="image.html?id=5"><img src="img/img5.jpg" alt="Image 5" /></a>
           </div>
           <div class="card">
-            <a href="img6.html"><img src="img/img6.jpg" alt="Image 6" /></a>
+            <a href="image.html?id=6"><img src="img/img6.jpg" alt="Image 6" /></a>
           </div>
         </div>
       </div>
@@ -102,6 +101,7 @@
         <p>© 2025 — BUT MMI Béziers - MAURIN N.</p>
       </div>
     </div>
+    <script src="js/script.js" defer></script>
     <script src="js/metrics.js" defer></script>
   </body>
 </html>
